--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node eslint-integration.test.js",
+    "start": "set NODE_ENV=DEVELOPMENT&&nodemon server.js",
+    "dev": "set NODE_ENV=DEVELOPMENT&&nodemon server.js",
+    "prod": "set NODE_ENV=PRODUCTION&&nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.926.0",
     "@aws-sdk/s3-request-presigner": "^3.926.0",
     "@sendgrid/mail": "^8.1.6",
+    "async-retry": "^1.3.3",
     "bcryptjs": "^3.0.3",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
