--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-useragent": "^2.0.1",
     "express-validator": "^7.3.0",
+    "geoip-lite": "^1.4.10",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
