--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "otp-generator": "^4.0.1",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
