--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^7.3.0",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
