--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "validator": "^13.15.20",
     "winston": "^3.18.3",
     "xss-clean": "^0.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
