--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-useragent": "^2.0.1",
     "express-validator": "^7.3.0",
+    "generate-api-key": "^1.0.2",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
+    "is-my-ip-valid": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
