--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@sendgrid/mail": "^8.1.6",
     "async-retry": "^1.3.3",
     "bcryptjs": "^3.0.3",
+    "bip32": "^5.0.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^7.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-useragent": "^2.0.1",
     "express-validator": "^7.3.0",
     "generate-api-key": "^1.0.2",
     "geoip-lite": "^1.4.10",
+    "hdkey": "^2.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "is-my-ip-valid": "^1.0.1",
@@ -38,6 +43,8 @@
     "otp-generator": "^4.0.1",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
+    "tiny-secp256k1": "^2.2.4",
+    "tronweb": "^6.1.1",
     "validator": "^13.15.20",
     "winston": "^3.18.3",
     "xss-clean": "^0.1.4"
