--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "otp-generator": "^4.0.1",
+    "puppeteer": "^24.34.0",
     "qrcode": "^1.5.4",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
